Removed the API prefix

--- a/NewsFeedServices/Views/Home/Index.cshtml
+++ b/NewsFeedServices/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         </div>
     </section>
     <section class="content-wrapper main-content clear-fix">
-        @Html.ActionLink("New feed APIs", "Index", "Help", new { area = "" }, null)
+        <h1>@Html.ActionLink("New feed APIs", "Index", "Help", new { area = "" }, null)</h1>
 
     </section>
 </div>
